kube/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ref-data-gov-tool
spec:
  podSelector:
    matchLabels:
      name: ref-data-gov-tool
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    ports:
    - protocol: TCP
      port: 10443
